--- a/o-micro/index.html
+++ b/o-micro/index.html
@@ -5,6 +5,7 @@
     <!-- Ajouter icone dessous -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>O'micro</title>
   </head>
   <body>
